@@ -53,10 +53,10 @@
 #include "gs_cci_value.h"
 #undef __INCLUDE_ONLY_FROM_MAIN_INCLUDE_CHECK__
 
-namespace cci_impl {
+__CCI_OPEN_CONFIG_NAMESPACE__
   
   template<typename T, cci::cnf::param_mutable_type TM>
-  static cci::cnf::cci_param_if<T, TM>* CreateParam(cci::cnf::cci_param<T, TM> *owner_par, const char* nam, const bool force_top_level_name) {
+  static cci::cnf::cci_param_if<T, TM>* create_cci_param(cci::cnf::cci_param<T, TM> *owner_par, const char* nam, const bool force_top_level_name) {
     cci::cnf::cci_param_if<T, TM>* impl_par = new cci_impl::cci_param<T, TM>(*owner_par, nam, force_top_level_name);
     std::cout << (std::hex) << "new impl_par=" << impl_par << std::endl;
     return impl_par;
@@ -64,7 +64,7 @@ namespace cci_impl {
 
   
   template<typename T, cci::cnf::param_mutable_type TM>
-  static cci::cnf::cci_param_if<T, TM>* CreateParam(cci::cnf::cci_param<T, TM> *owner_par, const char* nam, const T& val, const bool force_top_level_name) {
+  static cci::cnf::cci_param_if<T, TM>* create_cci_param(cci::cnf::cci_param<T, TM> *owner_par, const char* nam, const T& val, const bool force_top_level_name) {
     cci::cnf::cci_param_if<T, TM>* impl_par = new cci_impl::cci_param<T, TM>(*owner_par, nam, val, force_top_level_name);
     std::cout << (std::hex) << "new impl_par=" << impl_par << std::endl;
     return impl_par;
@@ -72,28 +72,32 @@ namespace cci_impl {
 
 
   template<typename T, cci::cnf::param_mutable_type TM>
-  static cci::cnf::cci_param_if<T, TM>* CreateParam(cci::cnf::cci_param<T, TM> *owner_par, const char* nam, const char* val, const bool force_top_level_name) {
+  static cci::cnf::cci_param_if<T, TM>* create_cci_param(cci::cnf::cci_param<T, TM> *owner_par, const char* nam, const char* val, const bool force_top_level_name) {
     cci::cnf::cci_param_if<T, TM>* impl_par = new cci_impl::cci_param<T, TM>(*owner_par, nam, val, force_top_level_name);
     std::cout << (std::hex) << "new impl_par=" << impl_par << std::endl;
     return impl_par;
   }
 
   template<typename T, cci::cnf::param_mutable_type TM>
-  static void InitParam(cci::cnf::cci_param_if<T, TM> *owner_par) {
-    cci_impl::cci_param<T, TM>* p = dynamic_cast<cci_impl::cci_param<T, TM>*> (owner_par);
-    assert(p != NULL && "The given parameter should be created by the CreateParam function thus being of the implementation type.");
+  static void init_cci_param(cci::cnf::cci_param<T, TM> *owner_par) {
+    assert(owner_par != NULL && "The given parameter must not be NULL.");
+    cci_impl::cci_param<T, TM>* p = dynamic_cast<cci_impl::cci_param<T, TM>*> (owner_par->get_pImpl());
+    assert(p != NULL && "The given parameter should be created by the create_cci_param function thus being of the implementation type.");
     p->init();
   }
   
 
   template<class T, cci::cnf::param_mutable_type TM>
-  void DestroyParam(cci::cnf::cci_param_if<T, TM>* param) {
+  void destroy_cci_param(cci::cnf::cci_param<T, TM>* param) {
     std::cout << (std::hex) << "delete param=" << param << std::endl;
-    delete param; param = NULL;
+    assert(param != NULL && "The given parameter must not be NULL.");
+    cci_impl::cci_param<T, TM>* p = dynamic_cast<cci_impl::cci_param<T, TM>*> (param->get_pImpl());
+    assert(p != NULL && "The given parameter should be created by the create_cci_param function thus being of the implementation type.");
+    delete p; p = NULL;
   }
   
 
-} // end namespace cci_impl
+__CCI_CLOSE_CONFIG_NAMESPACE__
 
 #endif
 
